# slideflow

./: .gitignore  .swiftlint.yml  BUILD_NOTES.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  Config.xcconfig.template  DESIGN.md  IMPLEMENTATION_NOTES.md  LICENSE  Package.swift  README.md  build_and_copy_bundle.sh  copy_python_bundle.sh  test_pptx.swift
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
SlideflowTests/Integration/: ExportFlowTests.swift  IndexingFlowTests.swift  SearchFlowTests.swift  WorkspaceFlowTests.swift
SlideflowTests/UI/: CriticalPathUITests.swift
SlideflowTests/Unit/: DirectoryMonitorTests.swift  PowerPointExporterTests.swift  PowerPointParserTests.swift  SearchEngineTests.swift  SearchFilterTests.swift  SlideExtractorTests.swift  SlideIndexerTests.swift  TextExtractorTests.swift  ThumbnailGeneratorTests.swift  WorkspaceSlideTests.swift  WorkspaceTests.swift
apps/desktop/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/scripts/: embed-cli.mjs
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  release.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  fonts.rs  lib.rs  main.rs  semantic.rs  updates.rs
apps/desktop/src/components/: AboutSheet.tsx  ApproxBadge.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DuplicatesView.tsx  EmptyState.tsx  ExportSheet.tsx  FilterPopover.tsx  Header.tsx  Inspector.tsx  OverlaySheet.tsx  PeekModal.tsx  RootExcludesEditor.tsx  SaveSearchPopover.tsx  SearchHelpPopover.tsx  SettingsSheet.tsx  Sidebar.tsx  SlideCard.tsx  SlideGrid.tsx  SortMenu.tsx  StatsView.tsx  Thumbnail.tsx  Toaster.tsx  Tray.tsx  TraySwitcher.tsx  ZeroResults.tsx
apps/desktop/src/lib/: api.ts  dnd.ts  exportPreset.ts  mock.ts  trayDims.ts  trayModel.test.ts  trayModel.ts  types.ts  useDismiss.ts  useSlideSvg.ts  utils.ts
apps/desktop/src/stores/: useApp.ts  useFonts.ts  useSemantic.ts  useToast.ts  useTray.ts  useUpdater.ts
crates/slideflow-cli/: Cargo.toml
crates/slideflow-cli/src/: main.rs
crates/slideflow-cli/tests/: cli.rs
crates/slideflow-core/: Cargo.toml
crates/slideflow-core/assets/fonts/: README.md
crates/slideflow-core/examples/: compose_demo.rs  corpus_check.rs  export_demo.rs  render_demo.rs  render_probe.rs  seed_library.rs
crates/slideflow-core/fixtures/fonts/: LICENSE.md
crates/slideflow-core/src/: dragout.rs  error.rs  export.rs  fixtures.rs  fonts.rs  hash.rs  index.rs  lib.rs  model.rs  opc.rs  render.rs  thumbs.rs
crates/slideflow-core/src/embed/: e5.rs  fake.rs  mod.rs  store.rs
crates/slideflow-core/src/index/: query.rs
crates/slideflow-core/src/pptx/: composer.rs  embedded_fonts.rs  mod.rs  parser.rs  scale.rs
crates/slideflow-core/src/render/: color.rs  effects.rs  fill.rs  geometry.rs  image.rs  mod.rs  placeholder.rs  style.rs  table.rs  text.rs
crates/slideflow-core/tests/: compose_jump_scale.rs  compose_scale.rs  e2e.rs  e5_embeddings.rs  export.rs  export_all_fail.rs  render_images.rs
docs/: RELEASE_SIGNING.md  ROADMAP.md  WINDOWS_SIGNING.md
docs/screenshots/: manifest.md
examples/pptx/: README.md  big-deck.pptx  charts.pptx  classic-4x3.pptx  edge-cases.pptx  images.pptx  notes-and-links.pptx  shapes.pptx  tables.pptx  text-hierarchy.pptx  unicode-i18n.pptx
merge_pptx_bundle/_internal/: libssl.3.dylib
scripts/: download_real_examples.py  generate_examples.py  render_contact_sheet.sh
slideflow/: ContentView.swift  slideflow.entitlements  slideflowApp.swift
slideflow.xcodeproj/: project.pbxproj  project.pbxproj.bak
slideflow.xcodeproj/xcuserdata/michaelseliger.xcuserdatad/xcschemes/: xcschememanagement.plist
slideflow/App/: SlideflowApp.swift
slideflow/Design/: ColorScheme.swift  Components.swift
slideflow/Models/: DirectoryConfig.swift  IndexedSlide.swift  SourcePresentation.swift  Workspace.swift  WorkspaceSlide.swift
slideflow/Models/CoreData/Slideflow.xcdatamodeld/: .xccurrentversion
slideflow/Models/CoreData/Slideflow.xcdatamodeld/Slideflow.xcdatamodel/: contents
slideflow/Scripts/: merge_pptx.py  merge_pptx.spec
slideflow/Services/Indexing/: DirectoryMonitor.swift  SlideIndexer.swift  TextExtractor.swift
slideflow/Services/PowerPoint/: PPTXMerger.swift  PowerPointExporter.swift  PowerPointParser.swift  SlideExtractor.swift  ThumbnailGenerator.swift
slideflow/Services/Search/: SearchEngine.swift  SearchFilter.swift
slideflow/Services/Storage/: CoreDataStack.swift  ThumbnailCache.swift
slideflow/Views/: ContentView.swift
slideflow/Views/DirectoryConfig/: AddDirectoryView.swift  DirectoryListView.swift
slideflow/Views/Export/: ExportDialogView.swift
slideflow/Views/Search/: SearchResultsView.swift  SearchView.swift  SlidePreviewView.swift
slideflow/Views/Workspace/: SlideReorderView.swift  WorkspaceEditorView.swift  WorkspaceView.swift
