[workspace]
resolver = "2"
members = ["crates/slideflow-core"]
# apps/desktop/src-tauri is a separate workspace member added on macOS builds;
# it is excluded here so `cargo test` in CI/Linux never needs GTK/WebKit.
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
notify = "7"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
base64 = "0.22"
imagesize = "0.13"
# Pure-Rust decode/resize/re-encode for downscaling grid thumbnails. No system
# libraries, so the core crate still builds on Linux CI without GUI deps.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }

[profile.release]
lto = "thin"
strip = true
