[workspace]
resolver = "2"
members = ["crates/slideflow-core"]
# apps/desktop/src-tauri is a separate workspace member added on macOS builds;
# it is excluded here so `cargo test` in CI/Linux never needs GTK/WebKit.
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
notify = "7"
walkdir = "2"
# Pure-Rust glob matching (aho-corasick/regex-automata/bstr) for per-root
# exclude patterns — no system libs, so core still builds on Linux CI.
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
base64 = "0.22"
imagesize = "0.13"
# Pure-Rust decode/resize/re-encode for downscaling grid thumbnails. No system
# libraries, so the core crate still builds on Linux CI without GUI deps.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
# Slide → PNG / PDF export (WS-D). All pure Rust — no system libs, so the core
# crate still builds on Linux CI. usvg/resvg/tiny-skia/fontdb drive the PNG path
# (parse the render SVG once, rasterize into a tiny-skia Pixmap). krilla +
# krilla-svg drive the PDF path (typst's pipeline: one page per slide, subset
# selectable text, shadows/filters rasterized). krilla-svg consumes the SAME
# usvg::Tree we parse, so these versions MUST stay in lockstep with usvg/resvg.
usvg = "0.47"
resvg = "0.47"
# Must match the tiny-skia that resvg 0.47 / krilla depend on (0.12), else the
# Pixmap/Transform types passed to resvg::render won't unify across versions.
tiny-skia = "0.12"
fontdb = "0.23"
krilla = "0.8"
krilla-svg = "0.8.1"

[profile.release]
lto = "thin"
strip = true
