[workspace]
resolver = "2"
members = ["crates/slideflow-core", "crates/slideflow-cli"]
# apps/desktop/src-tauri is a separate workspace member added on macOS builds;
# it is excluded here so `cargo test` in CI/Linux never needs GTK/WebKit.
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
roxmltree = "0.20"
rusqlite = { version = "0.40", features = ["bundled", "functions"] }
notify = "8"
walkdir = "2"
# Pure-Rust glob matching (aho-corasick/regex-automata/bstr) for per-root
# exclude patterns — no system libs, so core still builds on Linux CI.
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI argument parsing for the `slideflow` companion binary (crates/slideflow-cli).
# Pure Rust, no system libs — keeps the CLI buildable on the same runners as core.
clap = { version = "4", features = ["derive"] }
thiserror = "2"
sha2 = "0.11"
base64 = "0.22"
imagesize = "0.13"
# Pure-Rust data-parallelism for brute-force cosine search and near-duplicate
# clustering. No system libraries, so core still builds on Linux CI.
rayon = "1"
# Local semantic-search model runtime (CPU, pure Rust). Optional — compiled only
# behind slideflow-core's `embeddings` feature (and the desktop host, which
# depends on core with that feature). Never in the default engine build.
candle-core = "0.11"
candle-nn = "0.9"
candle-transformers = "0.11"
# Fast tokenizer loaded from tokenizer.json. Default features off (drops the
# HTTP hub client + progress bars); `fancy-regex` is the pure-Rust regex backend
# (avoids the `onig` C dependency, keeping the build cross-platform).
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
# Pure-Rust decode/resize/re-encode for downscaling grid thumbnails. No system
# libraries, so the core crate still builds on Linux CI without GUI deps.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff"] }
# Slide → PNG / PDF export (WS-D). All pure Rust — no system libs, so the core
# crate still builds on Linux CI. usvg/resvg/tiny-skia/fontdb drive the PNG path
# (parse the render SVG once, rasterize into a tiny-skia Pixmap). krilla +
# krilla-svg drive the PDF path (typst's pipeline: one page per slide, subset
# selectable text, shadows/filters rasterized). krilla-svg consumes the SAME
# usvg::Tree we parse, so these versions MUST stay in lockstep with usvg/resvg.
usvg = "0.47"
resvg = "0.47"
# Must match the tiny-skia that resvg 0.47 / krilla depend on (0.12), else the
# Pixmap/Transform types passed to resvg::render won't unify across versions.
tiny-skia = "0.12"
fontdb = "0.23"
krilla = "0.8"
krilla-svg = "0.8.1"
# Per-slide font subsetting for preview @font-face embedding (fontations'
# hb-subset port — keeps cmap/GPOS/variations, so subsets render in the
# webview). write-fonts must stay in lockstep with skera: its `read` re-export
# (read-fonts) provides the FontRef/IntSet/Tag types skera's API takes.
skera = "0.3"
write-fonts = "0.49"

[profile.release]
lto = "thin"
strip = true

# Optimize dependencies even in debug builds. candle's CPU matmul is orders of
# magnitude slower unoptimized (a first-time embed of a few hundred slides took
# ~40 min in a debug build, seconds when optimized). "*" targets dependencies
# only, not this workspace's own crates, so `cargo test` stays quick to rebuild
# while candle/gemm run at full speed.
[profile.dev.package."*"]
opt-level = 3
