[package]
name = "slideflow-core"
description = "PPTX indexing, search, preview rendering, and style-preserving composition"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zip.workspace = true
quick-xml.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
notify.workspace = true
walkdir.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
imagesize.workspace = true
image.workspace = true

[dev-dependencies]
tempfile = "3"
