[package]
name = "slideflow-core"
description = "PPTX indexing, search, preview rendering, and style-preserving composition"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zip.workspace = true
quick-xml.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
notify.workspace = true
walkdir.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
imagesize.workspace = true
image.workspace = true
# PNG / PDF export of picked slides (see src/export.rs).
usvg.workspace = true
resvg.workspace = true
tiny-skia.workspace = true
fontdb.workspace = true
krilla.workspace = true
krilla-svg.workspace = true
# Pure-Rust data-parallelism for brute-force cosine search and near-duplicate
# clustering (src/embed). No system libraries, so core still builds on Linux CI.
rayon.workspace = true

[dev-dependencies]
tempfile = "3"
# Parse exported PDFs in tests to assert page count / MediaBox / embedded fonts.
lopdf = "0.34"
# Decode exported PNGs in tests to assert pixel dimensions and non-uniformity.
image = { workspace = true }
