[package]
name = "slideflow-core"
description = "PPTX indexing, search, preview rendering, and style-preserving composition"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zip.workspace = true
quick-xml.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
notify.workspace = true
walkdir.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
imagesize.workspace = true
image.workspace = true
# PNG / PDF export of picked slides (see src/export.rs).
usvg.workspace = true
resvg.workspace = true
tiny-skia.workspace = true
fontdb.workspace = true
krilla.workspace = true
krilla-svg.workspace = true
# Per-slide font subsetting for preview @font-face embedding (see src/fonts.rs).
skera.workspace = true
write-fonts.workspace = true
# Pure-Rust data-parallelism for brute-force cosine search and near-duplicate
# clustering (src/embed). No system libraries, so core still builds on Linux CI.
rayon.workspace = true

# Optional: the candle-backed E5 embedder, gated by the `embeddings` feature.
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[features]
# Enables the real (candle) E5 embedder. The trait, vector store, fusion,
# hashing, schema, and duplicate logic are always compiled and tested with the
# FakeEmbedder; only `E5Embedder` and its ML dependencies live behind this flag.
# The desktop host depends on slideflow-core with `features = ["embeddings"]`.
embeddings = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]

[dev-dependencies]
tempfile = "3"
# Parse exported PDFs in tests to assert page count / MediaBox / embedded fonts.
lopdf = "0.44"
# Decode exported PNGs in tests to assert pixel dimensions and non-uniformity.
image = { workspace = true }
