[package]
name = "slideflow-desktop"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Slideflow — search your slides, compose new decks with original fidelity."
default-run = "slideflow-desktop"

# Keep this crate independent of the root Cargo workspace so `cargo test` in the
# root (CI/Linux) never needs GTK/WebKit. The empty table opts us out.
[workspace]

[lib]
name = "slideflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "slideflow-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `embeddings` pulls the candle-backed E5 embedder into the host build; the
# engine's default (CI-gated) build never compiles it.
slideflow-core = { path = "../../../crates/slideflow-core", features = ["embeddings"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2.1.1"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async primitives for bounding concurrent renders (Semaphore). Tauri already
# pulls tokio; we only need the sync module directly.
tokio = { version = "1", features = ["sync"] }
# Streaming model download with Range resume (semantic.rs). Blocking client on
# a plain std::thread, matching the scan-thread pattern; rustls avoids linking
# the system OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# Pinned-hash verification of downloaded model files, and content-hash naming of
# harvested embedded fonts.
sha2 = "0.10"
# Unpack the Aptos font zip (Microsoft ships the family as a .zip). Pure Rust,
# deflate only — matches the engine's OPC zip settings.
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# `pnpm tauri dev` builds this crate in debug. candle's CPU matmul is orders of
# magnitude slower unoptimized (a first-time embed of ~166 slides took ~40 min in
# a debug build, seconds once optimized), so optimize every dependency — the "*"
# here also covers the path-dep slideflow-core (with candle) since this is its own
# workspace. Our own thin host code stays debug for fast incremental rebuilds.
[profile.dev.package."*"]
opt-level = 3
